# tych

./: .gitignore
interface/: .gitignore  Cargo.toml
interface/crates/abstraction/: Cargo.toml
interface/crates/abstraction-derive/: Cargo.toml
interface/crates/abstraction-derive/src/: components.rs  lib.rs
interface/crates/abstraction-derive/src/for_enum/: mod.rs  model.rs
interface/crates/abstraction-derive/src/for_struct/: mod.rs  model.rs  parse_components.rs
interface/crates/abstraction-derive/src/for_struct/model/: attribute.rs  component.rs
interface/crates/abstraction/src/: lib.rs  main_rule.rs  opt.rs  res.rs
interface/crates/cli/src/: lib.rs
interface/crates/colorterm/: Cargo.toml
interface/crates/colorterm/src/: lib.rs
interface/crates/compiler/: Cargo.toml
interface/crates/compiler/src/: error.rs  extract.rs  flags.rs  invoke.rs  lib.rs  run_command.rs
interface/crates/model/: Cargo.toml
interface/crates/model/src/: chess.pest  grammar.rs  lib.rs  types.rs
interface/crates/model/src/types/: any_move.rs  boolean.rs  castling_move.rs  color.rs  container.rs  normal_move.rs  piece_kind.rs  pieces.rs  unit.rs  validation_failure.rs
interface/crates/model/src/types/board/: analysis_result.rs  board.rs  board_iteration.rs  castling_right.rs  flags.rs  mod.rs  situation.rs
interface/crates/model/src/types/execution/: methods.rs  mod.rs  multiple.rs  single.rs
interface/crates/model/src/types/squares/: file.rs  mod.rs  ranged_letter.rs  ranged_letter_conversions.rs  ranged_number.rs  ranged_number_conversions.rs  (+2 more)
interface/crates/output/: Cargo.toml
interface/crates/output/src/: analysis.rs  any_move.rs  board.rs  lib.rs
interface/src/: main.rs
(+1 files in other folders)
