[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "2.0.1", features = ["debug", "display", "deref", "from_str", "from"] }
derive-getters = "0.5"

pest = { workspace = true }
pest_derive = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }

abstraction = { path = "../abstraction", features=["paste"] }
abstraction-derive = { path = "../abstraction-derive" }
